--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,29 +1,6 @@
-<%= form_for(project) do |f| %>
-	<% if project.errors.any? %>
-		<div id="error_explanation">
-			<h2>
-				<%= pluralize(project.errors.count, "error") %>
-				prohibited this project from being saved:
-			</h2>
-			<ul>
-				<% project.errors.full_messages.each do |msg| %>
-					<li>
-						<%= msg %>
-					</li>
-				<%end%>
-			</ul>
-		</div>
-	<%end%>
+<%= simple_form_for(project) do |f| %>
+	<%= f.input :name%>
+	<%= f.input :description%>
 	
-	<p>
-		<%=  f.label :name, "Your Name"%> <br>
-		<%= f.text_field :name%>
-	</p>
-	
-	<p>
-		<%= f.label :description, "Specified Description"%> <br>
-		<%= f.text_field :description%>
-	</p>
-	
-	<%= f.submit %>
+	<%= f.button :submit, class: "btn-primary"%>
 <% end %>
