Implement tickets display

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -32,3 +32,12 @@
 		</li>
 	</ul>
 </header>
+
+<ul id="tickets">
+	<% @project.tickets.each do |ticket| %>
+		<li>
+			№<%= ticket.id %>
+			<%= link_to ticket.name, [@project, ticket] %>
+		</li>
+	<%end%>
+</ul>
